--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="fundo">
   </div>
   <!-- Aqui começa o Topo da página -->
-  <h1>Site do Luiz </h1>
+  <h1>Hamburgueria Big Dog </h1>
   <hr>
   <audio src="arquivos/y2.mp3" controls>
   </audio>
