--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
       <img src="imagens/risk-management-animate.svg" alt="">
     </div>
     <div class="right">
-      <form action="https://formsubmit.co/surfluizpires@gmail.com" method="POST">
+      <form action="https://formsubmit.co/surfluizpires@gmail.com" method="POST" enctype="multipart/form-data">
 
         <label for="nome">Nome:</label>
         <input type="text" name="nome" id="nome" required placeholder="Digite o seu nome">
@@ -52,8 +52,11 @@
         <label for="cidade">Cidade:</label>
         <input type="text" name="cidade" id="cidade" required placeholder="Digite o sua cidade">
 
-        <label for="comentario">Comentário:</label>
+        <label for="arquivo">Adicione o seu Curriculo</label>
+        <input type="file" name="arquivo" id="arquivo" accept=".pdf">
 
+
+        <label for="comentario">Comentário:</label>
         <textarea name="comentario" id="comentario"></textarea>
 
         <input type="submit" value="Enviar" name="submit">
